fixed media queries

--- a/index.html
+++ b/index.html
@@ -2,9 +2,48 @@
 <html>
 <head>
 	<title>Advanced CSS Grid Tutorial</title>
+	<link href="images/favicon.ico" rel="icon" type="image/x-icon" />
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
+	<div class="grid">
+		<div class="grid-element">
+			<img id="grid-1" src="images/jewerly-one.jpeg">
+			<h1>Earings</h1>
+			<p>Wow so beautiful</p>
+			<button>Shop now</button>
+		</div>
+		<div class="grid-element">
+			<img src="images/j-2.jpeg">
+			<h1>Earings</h1>
+			<p>Wow so beautiful</p>
+			<button>Shop now</button>
+		</div>
+		<div class="grid-element">
+			<img src="images/j-3.jpeg">
+			<h1>Earings</h1>
+			<p>Wow so beautiful</p>
+			<button>Shop now</button>
+		</div>
+		<div class="grid-element">
+			<img id="grid-4" src="images/j-4.jpeg">
+			<h1>Earings</h1>
+			<p>Wow so beautiful</p>
+			<button>Shop now</button>
+		</div>
+		<div class="grid-element">
+			<img src="images/j-5.jpeg">
+			<h1>Earings</h1>
+			<p>Wow so beautiful</p>
+			<button>Shop now</button>
+		</div>
+		<div class="grid-element">
+			<img id="grid-6" src="images/j-6.jpeg">
+			<h1>Earings</h1>
+			<p>Wow so beautiful</p>
+			<button>Shop now</button>
+		</div>
+	</div>
 
 <script type="text/javascript" src="js/main.js"></script>
 </body>
