minor style changes

--- a/index.html
+++ b/index.html
@@ -3,48 +3,54 @@
 <head>
 	<title>Advanced CSS Grid Tutorial</title>
 	<link href="images/favicon.ico" rel="icon" type="image/x-icon" />
+	<link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Montserrat|Open+Sans" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-	<div class="grid">
-		<div class="grid-element">
-			<img id="grid-1" src="images/jewerly-one.jpeg">
-			<h1>Earings</h1>
-			<p>Wow so beautiful</p>
-			<button>Shop now</button>
+	<div class="top-bar"></div>
+	<div class="container">
+		
+		<div class="grid">
+			<div class="grid-element">
+				<img id="grid-1" src="images/j-1.jpeg">
+				<h1>Mix and Match</h1>
+				<p>Your favorite pieces brought together effortlessly</p>
+				<button>Shop now</button>
+			</div>
+			<div class="grid-element">
+				<img src="images/j-2.jpeg">
+				<h1>Layered Essentials</h1>
+				<p>Layered pieces that never go out of style</p>
+				<button>Shop now</button>
+			</div>
+			<div class="grid-element">
+				<img src="images/j-3.jpeg">
+				<h1>Uniquely You</h1>
+				<p>Pieces as unique as you</p>
+				<button>Shop now</button>
+			</div>
+			<div class="grid-element">
+				<img id="grid-4" src="images/j-4.jpeg">
+				<h1>Delicate Statements</h1>
+				<p>Delicate details and impactful statements</p>
+				<button>Shop now</button>
+			</div>
+			<div class="grid-element">
+				<img src="images/j-5.jpeg">
+				<h1>Stack 'em up</h1>
+				<p>Newest stackable ring sets</p>
+				<button>Shop now</button>
+			</div>
+			<div class="grid-element">
+				<img id="grid-6" src="images/j-6.jpeg">
+				<h1>Trend Setter</h1>
+				<p>Shop our boldest pieces</p>
+				<button>Shop now</button>
+			</div>
 		</div>
-		<div class="grid-element">
-			<img src="images/j-2.jpeg">
-			<h1>Earings</h1>
-			<p>Wow so beautiful</p>
-			<button>Shop now</button>
-		</div>
-		<div class="grid-element">
-			<img src="images/j-3.jpeg">
-			<h1>Earings</h1>
-			<p>Wow so beautiful</p>
-			<button>Shop now</button>
-		</div>
-		<div class="grid-element">
-			<img id="grid-4" src="images/j-4.jpeg">
-			<h1>Earings</h1>
-			<p>Wow so beautiful</p>
-			<button>Shop now</button>
-		</div>
-		<div class="grid-element">
-			<img src="images/j-5.jpeg">
-			<h1>Earings</h1>
-			<p>Wow so beautiful</p>
-			<button>Shop now</button>
-		</div>
-		<div class="grid-element">
-			<img id="grid-6" src="images/j-6.jpeg">
-			<h1>Earings</h1>
-			<p>Wow so beautiful</p>
-			<button>Shop now</button>
-		</div>
+		
 	</div>
-
+	<div class="bottom-bar"></div>
 <script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
